--- a/capstone-backend/package.json
+++ b/capstone-backend/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
-    "prisma": "^6.0.1"
+    "prisma": "^6.0.1",
+    "stripe": "^17.7.0"
   }
 }
