--- a/capstone-frontend/package.json
+++ b/capstone-frontend/package.json
@@ -18,6 +18,8 @@
     "@prismane/core": "^1.6.0",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.7.0",
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
     "react": "^18.3.1",
