--- a/capstone-frontend/package.json
+++ b/capstone-frontend/package.json
@@ -22,12 +22,15 @@
     "@stripe/stripe-js": "^5.7.0",
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
+    "card-validator": "^10.0.2",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
