--- a/capstone-frontend/package.json
+++ b/capstone-frontend/package.json
@@ -23,8 +23,10 @@
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
     "card-validator": "^10.0.2",
+    "chart.js": "^4.4.8",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
